2001-03-14  Gene Z. Ragan  <gzr@eazel.com>

	* libnautilus-extensions/nautilus-icon-container.c:
	(icon_set_position):
	Fixed a minor annoying layout bug on the desktop. When icons were placed
	near the bottom of the desktop, they would sometimes jump
	partially offscreen.
	
2001-03-14  John Sullivan  <sullivan@eazel.com>

	Fixed bug 7696 ("Find" does nothing if location bar hidden)

	* src/nautilus-window-menus.c:
	(file_menu_toggle_find_mode_callback): Show location bar
	if it had been hidden. This is used by both Find/Browse menu
	item and Find button.

2001-03-14  John Sullivan  <sullivan@eazel.com>

	Fixed bug 7597 (Cut Text's underline accelerator changes
	to conflict with Copy Text's when a text field is focussed)

	* libnautilus/nautilus-clipboard-ui.xml: Changed _Cut Text
	to Cut _Text here, to match what it is when no text field
	is focussed.

2001-03-14  Ramiro Estrugo  <ramiro@eazel.com>

	* helper-scripts/nautilus-restore-settings-to-default.sh:
	Dont clobber any fonts that the user might have installed in
	~/.nautilus.  This is a bit of hack, but its very inconvenient to
	have these fonts be trashed when testing Nautilus in a "from
	scratch" environment.
	
	* nautilus.spec.in:
	Add the "restore settings to default" script to the package.
	
2001-03-13  Gene Z. Ragan  <gzr@eazel.com>

	I have been itching to check some code in for 1.2,
	so now I am doing it!
	
	This will enable drag support from Netscape to Nautilus.
	Only the desktop handles the drags for now. When I complete
	the async calls in NautilusFile, it will be safe to have the signal
	handled by other views such as FMDirectoryView.
	
	* libnautilus-extensions/nautilus-icon-container.c:
	* libnautilus-extensions/nautilus-icon-container.h:
	(nautilus_icon_container_initialize_class):
	Change name of signal create_nautilus_links
	to handle_uri_list.
		
	* libnautilus-extensions/nautilus-icon-dnd.c:
	(drag_data_received_callback), (receive_dropped_uri_list),